--- a/index.html
+++ b/index.html
@@ -185,13 +185,12 @@
 
     // ✅ HIER DEINE FIREBASE CONFIG EINFÜGEN (aus Firebase Console → Web-App)
     const firebaseConfig = {
-      // apiKey: "...",
-      // authDomain: "...",
-      // projectId: "...",
-      // storageBucket: "...",
-      // messagingSenderId: "...",
-      // appId: "..."
-    };
+  apiKey: "AIzaSyA7FgCpiflkQpnYcSuTh1q2aXpTfZXQ5vo",
+  authDomain: "agrarplanpro.firebaseapp.com",
+  projectId: "agrarplanpro",
+  storageBucket: "agrarplanpro.firebasestorage.app",
+  messagingSenderId: "793787909192",
+  appId: "1:793787909192:web:fac554aae83ba8431b847d" };
 
     // ---------- Basic UI ----------
     const $ = (id) => document.getElementById(id);
